--- a/src/components/projectsSection/projectSection.css
+++ b/src/components/projectsSection/projectSection.css
@@ -10,3 +10,19 @@
   left: 270px;
   position: absolute;
 }
+
+.circle {
+  margin-top: 40px;
+  height: 50px;
+  width: 50px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.circle-lable {
+  margin-top: 10px;
+  color: #bbb;
+}
