--- a/src/components/summarySection/summary.css
+++ b/src/components/summarySection/summary.css
@@ -1,15 +1,36 @@
 .summaryContainer {
   width: 800px;
-  padding-bottom: 100px;
-  padding-top: 50px;
+  padding-bottom: 60px;
+  padding-top: 40px;
   margin-left: auto;
   margin-right: auto;
 }
 #sumTitle {
+  padding-top: 10px;
+  font-family: Fjalla;
+  font-size: 3rem;
   text-align: left;
+  margin-bottom: 0px;
+  transition: transform 450ms ease;
+}
+
+#sumTitle:hover {
+  cursor: pointer;
+  transform: translateY(-10px);
+}
+#subTitle {
+  font-family: Fjalla;
+  font-size: 2rem;
+  text-align: left;
+  margin-top: 0px;
 }
 #profilePic {
   border-radius: 50%;
-  width: 150px;
-  height: 150px;
+  width: 180px;
+  height: 180px;
+  transition: transform 450ms ease;
+}
+#profilePic:hover {
+  cursor: pointer;
+  transform: translateY(-10px);
 }
