--- a/src/components/projectsSection/projectSection.css
+++ b/src/components/projectsSection/projectSection.css
@@ -4,11 +4,18 @@
   height: 200px;
   background-color: rgb(29, 29, 29);
 }
+.guide {
+  position: absolute;
+  top: 10px;
+  left: 30%;
+  transform: scale(0.5);
+}
 
 .projSectionTitle {
   top: -50px;
-  left: 270px;
+  left: 220px;
   position: absolute;
+  font-family: Fjalla;
 }
 
 .circle {
@@ -26,4 +33,6 @@
 .circle-lable {
   margin-top: 10px;
   color: #bbb;
+  font-family: Fjalla;
+  font-size: 1.25rem;
 }
