V1 portfolio desktop size not responsive yet

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: BebasNeue-Regular;
+  font-family: BebasNeue;
   src: url(./fonts/BebasNeue-Regular.ttf);
 }
 @font-face {
