--- a/src/components/summarySection/summary.css
+++ b/src/components/summarySection/summary.css
@@ -1,10 +1,24 @@
 .summaryContainer {
-  width: 800px;
+  width: 1000px;
   padding-bottom: 60px;
   padding-top: 40px;
   margin-left: auto;
   margin-right: auto;
 }
+
+@media screen and (max-width: 1100px) {
+  .summaryContainer {
+    width: auto;
+    padding: 60px;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  #sumTitle {
+    margin-top: 0px;
+  }
+}
+
 #sumTitle {
   padding-top: 10px;
   font-family: Fjalla;
