--- a/src/components/touroProject.css
+++ b/src/components/touroProject.css
@@ -3,6 +3,24 @@
   height: 200px;
   margin-bottom: 50px;
   padding-bottom: 50px;
+  display: block;
+}
+
+@media screen and (max-width: 900px) {
+  .TouroBar {
+    margin-bottom: 200px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .TouroBar {
+    margin-bottom: 300px;
+  }
+}
+@media screen and (max-width: 420px) {
+  .TouroBar {
+    margin-bottom: 350px;
+  }
 }
 .TouroBar p {
   text-align: left;
@@ -27,6 +45,7 @@
 .wrapper {
   margin-left: auto;
   margin-right: auto;
+  transition: 0.5s;
 }
 
 .TouroBar h3 {
