--- a/src/components/projectsSection/projectSection.css
+++ b/src/components/projectsSection/projectSection.css
@@ -20,7 +20,7 @@
   left: 25%;
   position: absolute;
   top: 260px;
-  color: aliceblue;
+  color: rgb(227, 242, 253);
   font-size: 2rem;
   font-family: BebasNeue;
   padding: 40px;
@@ -38,7 +38,7 @@
   margin-top: 40px;
   height: 50px;
   width: 50px;
-  background-color: #bbb;
+  background-color: rgb(227, 242, 253);
   border-radius: 50%;
   display: block;
   margin-left: auto;
