--- a/src/components/summarySection/summary.css
+++ b/src/components/summarySection/summary.css
@@ -1,4 +1,5 @@
 .summaryContainer {
+  position: relative;
   width: 1000px;
   padding-bottom: 60px;
   padding-top: 40px;
@@ -20,6 +21,7 @@
 }
 
 #sumTitle {
+  color: #fff;
   padding-top: 10px;
   font-family: Fjalla;
   font-size: 3rem;
@@ -33,6 +35,7 @@
   transform: translateY(-10px);
 }
 #subTitle {
+  color: #fff;
   font-family: Fjalla;
   font-size: 2rem;
   text-align: left;
