--- a/src/components/touroProject.css
+++ b/src/components/touroProject.css
@@ -1,27 +1,10 @@
 .TouroBar {
-  padding-top: 50px;
-  height: 200px;
+  padding: 30px;
   margin-bottom: 50px;
-  padding-bottom: 50px;
+
   display: block;
 }
 
-@media screen and (max-width: 900px) {
-  .TouroBar {
-    margin-bottom: 200px;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .TouroBar {
-    margin-bottom: 300px;
-  }
-}
-@media screen and (max-width: 420px) {
-  .TouroBar {
-    margin-bottom: 350px;
-  }
-}
 .TouroBar p {
   text-align: left;
   padding: 0px 30px;
