--- a/src/components/projectsSection/projectSection.css
+++ b/src/components/projectsSection/projectSection.css
@@ -36,9 +36,9 @@
 .circle {
   cursor: pointer;
   margin-top: 40px;
-  height: 50px;
-  width: 50px;
-  background-color: rgb(227, 242, 253);
+  height: 60px;
+  width: 60px;
+  /* background-color: rgb(227, 242, 253); */
   border-radius: 50%;
   display: block;
   margin-left: auto;
@@ -46,7 +46,7 @@
 }
 
 .circle:hover {
-  background-color: #616161;
+  background-color: #ffeb3b;
   transition: 0.2s;
 }
 
